# ship_ahoi

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  app.vue  docker-compose.yml  main.py  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
DISCO-main/: .gitignore  README.md  requirements.txt
components/: AppLayout.vue  CanvasScatterPlot.vue  CanvasScatterPlotWithImageTooltip.vue  CategoryMappingPreview.vue  CheatSheetModal.vue  ClusterControls.vue  ClusterDendrogram.vue  ClusterScatterPlot.vue  ColumnConfiguration.vue  ComparisonMode.vue  DataManagementSection.vue  DataSourceSection.vue  DataUploadStatus.vue  DatasetPreview.vue  EnhancedColumnConfiguration.vue  FileUploadWidget.vue  GlobalTooltipManager.vue  HistoryFilters.vue  IciclePlot.vue  ImageTooltip.vue  KSelectionPlots.vue  LoadingBar.vue  NavigationBar.vue  ParameterControls.vue  RecentRunsSection.vue  RunCard.vue  RunComparison.vue  SharedSidebar.vue  SidebarSection.vue  StaticSplitView.vue  Toast.vue  TooltipAccessibilityTest.vue  TooltipComponent.vue  TooltipDemo.vue  VisualizationControls.vue  VisualizationTabs.vue
composables/: useBackgroundKSelection.ts  useBeginnerDataConfig.ts  useBeginnerDefaults.ts  useCacheManager.ts  useClusteringAPI.ts  useColumnConfiguration.ts  useDataProcessing.ts  useDatasetManager.ts  useDebugUtils.ts  useFileUpload.ts  useFileUploadAPI.ts  useGlobalState.ts  useHistoryFilters.ts  useHistoryPersistence.ts  useImageDatasets.ts  useMemoryManagement.ts  useRunComparison.ts  useScientificColors.ts  useSidebarState.ts  (+5 more)
(+91 files in other folders)
