[project]
name = "ship-ahoi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chardet>=5.2.0",
    "clustpy>=0.0.1",
    "distinctipy>=1.2.0",
    "fastapi>=0.104.1",
    "hdbscan>=0.8.41",
    "matplotlib>=3.7.0",
    "motor>=3.3.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "psutil>=7.2.1",
    "pydantic>=2.4.0",
    "pymongo>=4.6.0",
    "pyparsing>=3.3.1",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.4",
    "uvicorn[standard]>=0.24.0",
]
